Styling added for Videos

--- a/maddy-family-fun/src/components/About/about.scss
+++ b/maddy-family-fun/src/components/About/about.scss
@@ -41,7 +41,7 @@
 
             .about-name {
                 cursor: pointer;
-                color: yellow;
+                color: orangered;
                 font-size: 1.5rem;
                 margin: 0.5rem 0;
                 transition: color 0.3s;
