--- a/maddy-family-fun/src/components/Footer/footer.scss
+++ b/maddy-family-fun/src/components/Footer/footer.scss
@@ -8,11 +8,8 @@
 .footer {
     display: flex;
     justify-content: center;
-    background-image: url(../../assets/images/Footer.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #dbf20c;
-    height: 16rem;
+    background-image: url(../../assets/images/Header.jpg);
+    height: 10rem;
     margin: 0;
 
     &-content {
