--- a/maddy-family-fun/src/styles/partials/_fonts.scss
+++ b/maddy-family-fun/src/styles/partials/_fonts.scss
@@ -1,9 +1,10 @@
 @font-face {
-    font-family: 'Bungee-Spice';
-    src: url("../../assets/fonts/BungeeSpice-Regular.ttf")
+    font-family: 'Bungee-Spice'; /* Define a custom font family name */
+    src: url("../../assets/fonts/BungeeSpice-Regular.ttf"); /* Specify the font file's path */
 }
 
 @font-face {
-    font-family: 'Bubblegum-Sans';
-    src: url("../../assets/fonts/BubblegumSans-Regular.ttf")
+    font-family: 'Bubblegum-Sans'; /* Define another custom font family name */
+    src: url("../../assets/fonts/BubblegumSans-Regular.ttf"); /* Specify the font file's path */
 }
+
