--- a/maddy-family-fun/src/styles/partials/_mixins.scss
+++ b/maddy-family-fun/src/styles/partials/_mixins.scss
@@ -1,18 +1,22 @@
+/* Styles that apply to mobile screens */
 @mixin mobile {
-    @media screen and (min-width: 320px) {
-      @content;
-    }
-    @media screen and (max-width: 767px) {
-      @content;
-    }
+  @media screen and (min-width: 320px) {
+    @content;
   }
+
+  @media screen and (max-width: 767px) {
+    @content;
+  }
+}
+/* Styles that apply to tablet screens */
 @mixin tablet {
-    @media screen and (min-width: 768px) {
-      @content;
-    }
+  @media screen and (min-width: 768px) {
+    @content;
   }
-  @mixin desktop {
-    @media screen and (min-width: 1280px) {
-      @content;
-    }
+}
+/* Styles that apply to desktop screens */
+@mixin desktop {
+  @media screen and (min-width: 1280px) {
+    @content;
   }
+}
