Final Capstone Commit

--- a/maddy-family-fun/src/components/Front/front.scss
+++ b/maddy-family-fun/src/components/Front/front.scss
@@ -41,6 +41,7 @@
 .image {
   max-width: 75vw;
   background-position: center;
+  border-radius: 1rem;
   margin-bottom: 1rem;
   max-height: 31rem;
   animation: rotateImage 0.5s ease-in 1;
